# ibl-baker

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
crates/ibl_cli/: Cargo.toml  README.md
crates/ibl_cli/src/: main.rs
crates/ibl_core/: Cargo.toml  README.md
crates/ibl_core/src/: bake_pipeline.rs  lib.rs  source_image.rs
crates/ktx2_writer/: Cargo.toml  README.md  build.rs
crates/ktx2_writer/src/: compress.rs  dfd.rs  kv.rs  lib.rs
docs/: cli.md  format-spec.md  loader-api.md  release.md  roadmap.md  three-loader-api.md
scripts/: refresh-fixtures.mjs
