[package]
name = "ibl_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for baking and validating IBL assets."
repository = "https://github.com/shawn0326/ibl-baker"
readme = "README.md"

[[bin]]
name = "ibl-baker"
path = "src/main.rs"

[dependencies]
ibl_core = { version = "0.2.1", path = "../ibl_core" }

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["hdr", "png"] }
