[package]
name = "ibl_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Renderer-agnostic Rust core for baking, reading, validating IBL assets, and exporting KTX2."
repository = "https://github.com/shawn0326/ibl-baker"
readme = "README.md"

[lib]
name = "ibl_core"
path = "src/lib.rs"

[dependencies]
exr = "1.74.0"
glam = "0.30.0"
image = { version = "0.25.10", default-features = false, features = ["hdr", "jpeg", "png"] }
ktx2_writer = { version = "0.2.1", path = "../ktx2_writer" }
png = "0.18.0"
rayon = "1.10.0"

[dev-dependencies]
approx = "0.5.1"
